[package]
name = "sigrachain-crypto"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Cryptographic engine for SigraChain e-signature verification"

[dependencies]
sha2 = { version = "0.10", features = ["asm"] }
ring = "0.17"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zeroize = { version = "1.7", features = ["derive"] }
rayon = { version = "1.8", optional = true }
log = "0.4"

[features]
default = []
parallel = ["rayon"]

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
